# nekoton-flutter

./: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/js/: main.js
example/: README.md  analysis_options.yaml  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/data/: nekoton_repository.dart
example/lib/presentation/: application.dart  home_screen.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: nekoton_flutter.podspec
ios/Classes/: NekotonFlutterPlugin.h  NekotonFlutterPlugin.m  SwiftNekotonFlutterPlugin.swift
js/: package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: errors.ts  index.ts  jrpc.ts  notifications.ts  provider.ts  utils.ts
lib/: nekoton_flutter.dart
lib/src/: accounts_storage_controller.dart  approval_controller.dart  bindings.dart  connection_controller.dart  constants.dart  external_accounts_controller.dart  ffi_utils.dart  keystore_controller.dart  native_library.dart  nekoton.dart  permissions_controller.dart  preferences.dart  subscriptions_controller.dart  utils.dart
lib/src/core/: unsigned_message.dart  utils.dart
lib/src/core/keystore/: constants.dart  (+3 more)
lib/src/crypto/: constants.dart  unsigned_message.dart  verify_signature.dart
lib/src/depool/: depool.dart
lib/src/helpers/: code_to_tvc.dart  extract_public_key.dart  get_code_salt.dart  helpers.dart  merge_tvc.dart  pack_std_smc_addr.dart  repack_address.dart  set_code_salt.dart  split_tvc.dart  unpack_std_smc_addr.dart  validate_address.dart
lib/src/models/: account_subject.dart  approval_request.dart  execution_result.dart  execution_status.dart  key_subject.dart  native_exception.dart  native_result.dart  native_status.dart  nekoton_exception.dart  pointed.dart  pointer_wrapper.dart  subscription_subject.dart
lib/src/provider/: provider_events.dart  provider_requests.dart  provider_scripts.dart
lib/src/transport/: constants.dart  gql_transport.dart  jrpc_transport.dart  proto_transport.dart  transport.dart
lib/src/utils/: address.dart  provider.dart
linux/: CMakeLists.txt  nekoton_flutter_plugin.cc
macos/: nekoton_flutter.podspec
macos/Classes/: NekotonFlutterPlugin.h  NekotonFlutterPlugin.swift
rust/: Cargo.toml  build.rs  cbindgen.toml  clippy.toml  makefile  rustfmt.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  models.rs
rust/src/core/: mod.rs  models.rs
rust/src/core/accounts_storage/: mod.rs  models.rs
rust/src/core/generic_contract/: handler.rs  mod.rs  models.rs
rust/src/core/keystore/: mod.rs  models.rs
rust/src/core/token_wallet/: handler.rs  mod.rs  models.rs
rust/src/core/ton_wallet/: handler.rs  mod.rs  models.rs
rust/src/crypto/: mod.rs  models.rs
rust/src/crypto/derived_key/: mod.rs
rust/src/crypto/encrypted_key/: mod.rs
rust/src/crypto/ledger_key/: mod.rs
rust/src/crypto/mnemonic/: mod.rs  models.rs
rust/src/crypto/password_cache/: mod.rs
rust/src/depool/: mod.rs
rust/src/helpers/: mod.rs  models.rs
rust/src/helpers/abi/: mod.rs  models.rs
rust/src/transport/: adnl_transport.rs  gql_transport.rs  jrpc_transport.rs  mod.rs  models.rs  proto_transport.rs
rust/src/utils/: address.rs  mod.rs  provider.rs
rust/src/web/: helpers.rs  mod.rs  models.rs
windows/: CMakeLists.txt  nekoton_flutter_plugin.cpp  nekoton_flutter_plugin.h  nekoton_flutter_plugin_c_api.cpp
(+375 files in other folders)
