[package]
authors = [ "Vadim Ledyaev <v.o.ledyaev@gmail.com>" ]
edition = "2021"
name = "nekoton-flutter"
version = "0.0.1"

[lib]
crate-type = [ "staticlib", "cdylib" ]
name = "nekoton_flutter"

[dependencies]
allo-isolate = "0.1.12"
anyhow = "1.0.54"
async-trait = "0.1.52"
base64 = "0.13.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
hex = "0.4.3 "
lazy_static = "1.4.0"
nekoton = { git = "https://github.com/broxus/nekoton.git", features = [
    "gql_transport",
    "jrpc_transport",
] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
secstr = { version = "0.4.0", features = [ "serde" ] }
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
sha2 = "0.9"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "sync" ] }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
