[package]
authors = ["Vadim Ledyaev <v.o.ledyaev@gmail.com>"]
edition = "2021"
name = "nekoton-flutter"
version = "0.0.1"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "nekoton_flutter"

[dependencies]
allo-isolate = "0.1.12"
anyhow = "1.0.54"
async-trait = "0.1.52"
base64 = "0.13.0"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
hex = "0.4.3 "
lazy_static = "1.4.0"
log-panics = "2.1.0"
nekoton = { git = "https://github.com/broxus/nekoton.git", features = [
    "gql_transport",
    "jrpc_transport",
] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }

openssl = { version = "0.10.38", features = ["vendored"] }

secstr = { version = "0.5.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.9.9"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "sync"] }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

#[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"
log = "0.4.17"
paste = "1.0.9"

[profile.release]
debug = true

[build-dependencies]
cbindgen = "0.21.0"